# creoscan-bot

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  env.example  git-hook-post-receive  init.sql  pyproject.toml  start.sh
configs/: creoscan.yaml  datafan.yaml
src/: exceptions.py  jobs.py  main.py  models.py  settings.py  utils.py
src/addons/: APIAdapter.py  Permissions.py  Telemetry.py  Trottling.py
src/common/: decorators.py  filters.py  models.py  utils.py
src/db/: connector.py  models.py
src/helpers/: FeedAnalyzer.py  TgStatParser.py  base.py  clients.py  instagram.py  notify.py  state.py  tiktok.py  utils.py
src/plugins/: base.py
src/plugins/Admin/: core.py
src/plugins/Announce/: core.py  jobs.py  utils.py
src/plugins/Common/: core.py
src/plugins/Instagram/: core.py
src/plugins/Introduction/: core.py
src/plugins/Monitoring/: core.py  jobs.py  schemas.py  utils.py
src/plugins/PublicationTime/: core.py
src/plugins/Support/: core.py
src/plugins/TgStat/: core.py
src/plugins/TikTok/: core.py
